# VectorScreen

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  build.rs  feahter_screen.py
.cargo/: config.toml
.github/workflows/: cross-compile.yml
config/: vector-screen.toml
docs/: ad5m-features.md
scripts/: install.sh  validate-api.sh  vector-screen-debug.sh  vector-screen.service
src/: config.rs  logging.rs  main.rs
src/app/: callbacks.rs  commands.rs  mod.rs  notifications.rs
src/klipper/: bed_mesh.rs  gcode.rs  input_shaper.rs  macros.rs  mod.rs  tmc.rs
src/moonraker/: files.rs  message.rs  mod.rs  multi.rs
src/system/: mod.rs  touch_cal.rs  wifi.rs
src/ui/: console.rs  controls.rs  fans.rs  led.rs  mod.rs  motion.rs  progress.rs  thermal.rs  tuning.rs
src/util/: ring_buffer.rs
ui/: app.slint  main.slint  theme.slint
ui/components/: button.slint  card.slint  graph.slint  label.slint  stepper.slint  thumbnail.slint  toggle.slint
ui/screens/: bed_mesh.slint  console.slint  controls.slint  fans.slint  files.slint  home.slint  input_shaper.slint  tmc.slint  touch_cal.slint  tuning.slint  wifi.slint
