[package]
name = "vector-screen"
version = "0.1.0"
edition = "2021"
description = "Vector Screen - Touch UI for FlashForge Adventurer 5M"

[dependencies]
slint = { version = "1.16", default-features = false, features = [
    "compat-1-2",
    "backend-linuxkms-noseat",
    "renderer-software",
    "software-renderer-path",
] }
fontique = { version = "0.8", features = ["fontconfig-dlopen"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "chrono",
] }
toml = "0.8"

[build-dependencies]
slint-build = "1.16"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
